adding header and nav.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rashad Picture Viewer</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Rashad Portfolio</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="row">
+                <div class="col-12">
+                    <h1>Hello Everybody and welcome to my Portfolio</h1>
+                </div>
+            </div>
+        </header>
+
+        <nav class="row">
+            <div class="col-1">
+                <a href="https://rashadattaf.github.io/Memory-Game/index.html">Memory Game</a>
+            </div>
+            <div class="col-1"></div>
+            <div class="col-1">
+                <a href="https://rashadattaf.github.io/Classic-Arcade-Game/index.html">Arcade Game</a>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
