--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
         <nav class="row">
             <div class="col-1">
-                <a href="https://rashadattaf.github.io/Memory-Game/index.html">Memory Game</a>
+                <a href="https://rashadattaf.github.io/Memory-Game">Memory Game</a>
             </div>
             <div class="col-1"></div>
             <div class="col-1">
-                <a href="https://rashadattaf.github.io/Classic-Arcade-Game/index.html">Arcade Game</a>
+                <a href="https://rashadattaf.github.io/Classic-Arcade-Game">Arcade Game</a>
             </div>
         </nav>
     </div>
