--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <nav class="row">
             <div class="col-1">
-                <a href="https://rashadattaf.github.io/Memory-Game">Memory Game</a>
+                <a href="https://rashadattaf.github.io/Memory-Game/">Memory Game</a>
             </div>
             <div class="col-1"></div>
             <div class="col-1">
