--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-1"></div>
             <div class="col-1">
-                <a href="https://rashadattaf.github.io/Classic-Arcade-Game">Arcade Game</a>
+                <a href="https://rashadattaf.github.io/Classic-Arcade-Game/">Arcade Game</a>
             </div>
         </nav>
     </div>
